--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,49 +49,51 @@ license = "MIT"
 name = "wandb"
 readme = "package_readme.md"
 repository = "https://github.com/wandb/wandb"
-version = "0.13.9"
+version = "0.13.10.dev1"
 
 [tool.poetry.dependencies]
-appdirs = ">=1.4.3"
-aws = {optional = true, version = "^0.2.5"}
-azure-storage-blob = {optional = true, version = "^12.14.1"}
-bokeh = {optional = true, python = '>=3.8', version = "^3.0.3"}
-botocore = {optional = true, version = "^1.29.58"}
-chardet = {optional = true, version = "^5.1.0"}
-click = ">=7.0,<8.0.0 || >8.0.0"
+python = "^3.6.2"
+appdirs = "^1.4.3"
+aws = {version = "^0.2.5", optional = true}
+azure-storage-blob = {version = ">=12.13.1", optional = true}
+bokeh = {optional = true, version = ">=2.3.3"}
+boto3 = {version = ">=1.23.1", optional = true}
+botocore = {optional = true, version = "^1.26.10"}
+chardet = {optional = true, version = "^5.0.0"}
+click = "^7.0.0 || ^8.0.1"
 cloudpickle = {optional = true, version = "^2.2.1"}
 dataclasses = {python = "<3.7", version = "^0.8"}
-docker-pycreds = ">=0.4.0"
-gitpython = ">=1.0.0"
-google-cloud-storage = {optional = true, version = "^2.7.0"}
-grpcio = {optional = true, version = ">=1.27.2"}
+docker-pycreds = "^0.4.0"
+gitpython = "^3.1.18"
+google-cloud-storage = {optional = true, version = "^2.0.0"}
+grpcio = {optional = true, version = "^1.27.2"}
 iso8601 = {optional = true, version = "^1.1.0"}
 kubernetes = {optional = true, version = "^25.3.0"}
 minio = {optional = true, version = "^7.1.13"}
 moviepy = {optional = true, version = "^1.0.3"}
-nbconvert = {optional = true, version = "^7.2.9"}
-nbformat = {optional = true, version = "^5.7.3"}
-numpy = {optional = true, python = '>=3.8', version = "^1.24.1"}
+nbconvert = {optional = true, version = "^6.0.7"}
+nbformat = {optional = true, version = "^5.1.3"}
+numpy = {optional = true, version = ">=1.19.5"}
 pathtools = "^0.1.2"
-pillow = {optional = true, version = "^9.4.0"}
+pillow = {optional = true, version = "^8.4.0"}
 plotly = {optional = true, version = "^5.13.0"}
 protobuf = [
   {markers = "python_version < '3.9' and sys_platform == 'linux'", version = ">=3.12.0,<4.21.0 || >4.21.0,<5"},
   {markers = "python_version == '3.9' and sys_platform == 'linux'", version = ">=3.15.0,<4.21.0 || >4.21.0,<5"},
   {markers = "python_version > '3.9' or sys_platform != 'linux'", version = ">=3.19.0,<4.21.0 || >4.21.0,<5"}
 ]
-psutil = ">=5.0.0"
-python = "^3.7"
+psutil = "^5.0.0"
 pyyaml = "^6.0"
-rdkit-pypi = {optional = true, version = "^2022.9.4"}
-requests = ">=2.0.0,<3"
-sentry-sdk = ">=1.0.0"
-setproctitle = "^1.3.2"
-setuptools = "^66.1.1"
+rdkit = {optional = true, version = ">=2022.3.3", markers = "(platform_machine == 'arm64' and python_version >= '3.7') or python_version >= '3.8'"}
+rdkit-pypi = {optional = true, version = ">=2021.9.4", markers = "platform_machine != 'arm64' and python_version < '3.8'"}
+requests = "^2.0.0"
+sentry-sdk = "^1.14.0"
+setproctitle = "^1.2.3"
+setuptools = ">=59.6.0"
 sh = {optional = true, version = "^1.14.3"}
 soundfile = {optional = true, version = "^0.11.0"}
-sweeps = {optional = true, version = ">=0.2.0"}
-typing-extensions = {python = '<3.10', version = "^4.4.0"}
+sweeps = {optional = true, version = "^0.2.0"}
+typing-extensions = {python = '<3.10', version = "^4.1.1"}
 
 [tool.poetry.extras]
 all = [
@@ -128,6 +130,7 @@ media = [
   "numpy",
   "pillow",
   "plotly",
+  "rdkit",
   "rdkit-pypi",
   "soundfile"
 ]
@@ -138,65 +141,63 @@ sweeps = ["sweeps"]
 [tool.poetry.group.build.dependencies]
 bump2version = "^1.0.1"
 bumpversion = "^0.6.0"
-libcst = "^0.4.9"
-twine = "^4.0.2"
+libcst = "^0.4.1"
+twine = ">=3.8.0"
 
 [tool.poetry.group.coverage.dependencies]
 codecov = "^2.1.12"
-coverage = "^7.1.0"
-pycobertura = "^3.0.0"
-pytest = "^7.2.1"
+coverage = ">=6.2"
+pycobertura = ">=2.1.0"
 pytest-cov = "^4.0.0"
 
 [tool.poetry.group.dev.dependencies]
-google-cloud-aiplatform = "^1.21.0"
-imageio = "^2.25.0"
-ipykernel = {python = ">=3.8", version = "^6.20.2"}
-ipython = {python = ">=3.8", version = "^8.8.0"}
-matplotlib = {python = '>=3.8', version = "!=3.5.2"}
-nbclient = "^0.7.2"
-pandas = {python = '>=3.8', version = "^1.5.3"}
-scikit-learn = {python = ">=3.8,<3.12", version = "^1.2.1"}
-scipy = {python = ">=3.8,<3.12", version = ">=1.6.1"}
+google-cloud-aiplatform = {version = "^1.4.3", python = ">=3.7"}
+imageio = "^2.15.0"
+ipykernel = ">=5.5.6"
+ipython = ">=7.16.3"
+matplotlib = "^3.3.4,!=3.5.2"
+nbclient = "^0.5.9"
+pandas = "^1.1.5"
+scipy = "^1.5.4"
 
 [tool.poetry.group.lint.dependencies]
-black = {extras = ["jupyter"], version = "^22.12.0"}
-darglint = ">=1.8.0"
-flake8 = {python = ">=3.8.1", version = "^6.0.0"}
+black = {extras = ["jupyter"], version = "^22.8.0"}
+darglint = "^1.8.0"
+flake8 = ">=5.0.4"
 flake8-bugbear = ">=21.4.2"
 flake8-docstrings = ">=1.3.1"
 flake8-fixme = "^1.1.1"
 flake8-typing-imports = ">=1.1"
-grpcio = ">=1.46.3"
-isort = "^5.11.4"
-pep8-naming = "^0.13.3"
-pylint = {python = ">=3.7.2", version = "^2.15.10"}
+isort = "^5.10.1"
+pep8-naming = "^0.13.1"
+pylint = "^2.13.9"
+
+[tool.poetry.group.protobuf]
+optional = true
 
 [tool.poetry.group.protobuf.dependencies]
-grpcio = ">=1.50.0"
-grpcio-tools = ">=1.50.0"
-mypy-protobuf = ">=3.4.0"
+grpcio = {version = "^1.48.2", python = ">=3.7"}
+grpcio-tools = {version = "^1.48.2", python = ">=3.7"}
+mypy-protobuf = {version = "^3.3.0", python = ">=3.7"}
 
 [tool.poetry.group.test.dependencies]
-hypothesis = "^6.65.1"
+hypothesis = "^6.31.6"
 mock = ">=2.0.0"
-moto = {extras = ["s3"], version = "^4.1.1"}
+moto = {extras = ["s3"], version = "^4.0.13" }
 parameterized = "^0.8.1"
-pytest = "^7.2.1"
-pytest-cov = "^4.0.0"
+pytest = "^7.0.1"
 pytest-flakefinder = "^1.1.0"
 pytest-flask = "^1.2.0"
-pytest-mock = "^3.10.0"
+pytest-mock = "^3.6.1"
 pytest-openfiles = "^0.5.0"
-pytest-rerunfailures = "^11.0"
+pytest-rerunfailures = ">=10.3"
 pytest-timeout = "^2.1.0"
-pytest-xdist = "^3.1.0"
+pytest-xdist = "^3.0.2"
 tox-pyenv = ">=1.0.3"
 
 [tool.poetry.group.typing.dependencies]
-grpcio = "^1.51.1"
 lxml = "^4.9.2"
-mypy = "^0.991"
+mypy = "^0.971"
 types-click = "^7.1.8"
 
 [tool.poetry.scripts]
