--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -942,7 +942,7 @@ jobs:
             - run:
                 name: "Propagate GCP & AWS credential environment variables to pod.yaml"
                 command: |
-                  GCLOUD_SERVICE_KEY_FLATTENED=$(echo $GCLOUD_SERVICE_KEY | tr -d "\\n")
+                  export GCLOUD_SERVICE_KEY_FLATTENED=$(echo "$GCLOUD_SERVICE_KEY" | awk '{gsub(/\\r|\\n/,"");print}')
                   sed -i -e 's^GCLOUD_SERVICE_KEY_PLACEHOLDER^'"\'$GCLOUD_SERVICE_KEY_FLATTENED\'"'^g' << parameters.path >>/<< parameters.pod_config_name >>
                   sed -i -e 's^GCLOUD_PROJECT_PLACEHOLDER^'"$GOOGLE_PROJECT_ID"'^g' << parameters.path >>/<< parameters.pod_config_name >>
                   sed -i -e 's^AWS_DEFAULT_REGION_PLACEHOLDER^'"$AWS_DEFAULT_REGION"'^g' << parameters.path >>/<< parameters.pod_config_name >>
