the great escape

--- a/tox.ini
+++ b/tox.ini
@@ -510,6 +510,7 @@ setenv =
     COVERAGE_FILE={envdir}/.coverage
     YEACOV_SOURCE={envsitepackagesdir}/wandb/
     WANDB_PROJECT=standalone-{env:DATE}
+    GOOGLE_APPLICATION_CREDENTIALS=/tmp/gcp-service-account.json
 passenv =
     DATE
     USERNAME
@@ -527,14 +528,12 @@ deps =
 whitelist_externals =
     date
     echo
-    export
     mkdir
     sh
 commands =
     mkdir -p test-results
     wandb login --relogin {env:WANDB_API_KEY}
     echo $GCLOUD_SERVICE_KEY > /tmp/gcp-service-account.json
-    export GOOGLE_APPLICATION_CREDENTIALS=/tmp/gcp-service-account.json
     standalone-cpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-cpu run {posargs:--all}
     standalone-gpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-gpu run {posargs:--all}
     standalone-tpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-tpu run {posargs:--all}
