--- a/tox.ini
+++ b/tox.ini
@@ -510,16 +510,7 @@ setenv =
     COVERAGE_FILE={envdir}/.coverage
     YEACOV_SOURCE={envsitepackagesdir}/wandb/
     WANDB_PROJECT=standalone-{env:DATE}
-    GOOGLE_APPLICATION_CREDENTIALS=/tmp/gcp-service-account.json
-passenv =
-    DATE
-    USERNAME
-    WANDB_API_KEY
-    AWS_ACCESS_KEY_ID
-    AWS_DEFAULT_REGION
-    AWS_SECRET_ACCESS_KEY
-    GCLOUD_SERVICE_KEY
-    GCLOUD_PROJECT
+passenv = *
 deps =
     -r{toxinidir}/requirements.txt
     standalone-{cpu,gpu,tpu,local}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
@@ -533,7 +524,7 @@ whitelist_externals =
 commands =
     mkdir -p test-results
     wandb login --relogin {env:WANDB_API_KEY}
-    echo $GCLOUD_SERVICE_KEY > /tmp/gcp-service-account.json
+    sh -c "echo $GCLOUD_SERVICE_KEY > /tmp/gcp-service-account.json"
     standalone-cpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-cpu run {posargs:--all}
     standalone-gpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-gpu run {posargs:--all}
     standalone-tpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-tpu run {posargs:--all}
