doc: comments to explain httpx/respx version restrictions

--- a/tox.ini
+++ b/tox.ini
@@ -214,7 +214,7 @@ deps=
     mypy==0.991
     lxml
     grpcio
-    httpx>=0.22.0
+    httpx>=0.22.0  # 0.23.0 dropped Python 3.6; we can upgrade once we drop it too
 setenv =
     MYPYPATH = {toxinidir}
 commands=
