--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ setuptools
 appdirs>=1.4.3
 dataclasses; python_version < '3.7'
 typing_extensions; python_version < '3.10'
-httpx>=0.22.0
+httpx>=0.22.0  # 0.23.0 dropped Python 3.6; we can upgrade once we drop it too
