--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -37,7 +37,7 @@ xgboost
 lightgbm
 rdkit-pypi; sys_platform != 'darwin' or (sys_platform == 'darwin' and platform.machine != 'arm64')
 rdkit-pypi; python_version > '3.7' and sys_platform == 'darwin' and platform.machine == 'arm64'
-respx>=0.20.0
+respx>=0.20.0  # 0.21.0 dropped Python 3.6; we can upgrade once we drop it too
 
 # TODO: fix extra dependencies
 #   We need to improve how we do requirements_dev as specifying .[extra] creates
