--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -414,38 +414,6 @@ jobs:
                 # taken from slack-secrets context
                 channel: $SLACK_SDK_NIGHTLY_CI_CHANNEL
 
-  pex:
-    parameters:
-      python_version_major:
-        type: integer
-        default: 3
-      python_version_minor:
-        type: integer
-        default: 8
-    docker:
-      - image: "python:<<parameters.python_version_major>>.<<parameters.python_version_minor>>"
-    resource_class: small
-    working_directory: /mnt/ramdisk
-    steps:
-      - checkout
-      - run:
-          name: Install system deps
-          command: |
-            apt-get update && apt-get install -y libsndfile1 ffmpeg
-      - run:
-          name: Install pex
-          command: |
-            pip install -U pip
-            pip install pex
-          no_output_timeout: 5m
-      - run:
-          name: Run pex test
-          no_output_timeout: 5m
-          command: |
-            pex . -o wandb.pex
-            WANDB_EXECUTABLE=./wandb.pex ./wandb.pex -c "import wandb; import os; wandb.init(mode='offline'); wandb.finish()"
-      - save-test-results
-
   protobuf-compatability:
     parameters:
       python_version_major:
@@ -1513,10 +1481,18 @@ workflows:
           parallelism: 1
           xdist: 1
       #
-      # pex test
+      # functional tests with different executors
       #
-      - pex:
-          name: "pex"
+      - tox-base:
+          matrix:
+            parameters:
+              python_version_major: [ 3 ]
+              python_version_minor: [ 9 ]
+              toxenv:
+                - "executor-uwsgi"
+                - "executor-gunicorn"
+                - "executor-pex"
+          name: "<<matrix.toxenv>>-linux-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
 
   # todo: needs love
   #  manual_test:
