--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,8 @@ envlist=
     flake8,
     docstrings,
     py{36,37,38,39,launch},
-    func-s_{base,sklearn,metaflow,tf115,tf21,tf24,tf25,tf26,ray112,ray2,service,docs,
-            imports{1,2,3,4,5,6,7,8,9,10,11,12},noml,grpc}-py37,
+    func-s_{base,sklearn,metaflow,tf115,tf21,tf24,tf25,tf26,ray112,ray2,service,docs,noml,grpc}-py37,
+    func-s_imports{1,2,3,4,5,6,7,8,9,10,11,12}-py37,
     standalone-{cpu,gpu,tpu,local}-py38,
     regression-{yolov5,huggingface,keras,tensorflow,pytorch,wandb-sdk-standalone,wandb-sdk-examples,wandb-sdk-wandb-examples,s3,sagemaker}-py{37,38,39,310},
     func-cover,
@@ -57,7 +57,7 @@ setenv =
     py{36,37,38,39,310,launch}: COVERAGE_FILE={envdir}/.coverage
     py{37,39}: WINDIR=C:\\Windows
 # Pytorch installations on non-darwin need the `-f`
-whitelist_externals =
+allowlist_externals =
     mkdir
     bash
 commands =
@@ -71,7 +71,7 @@ deps =
     s_nb: ipython
     s_nb: ipykernel
     s_nb: nbclient
-whitelist_externals =
+allowlist_externals =
     mkdir
 setenv =
     py{36,37,38,39,310,launch}: COVERAGE_FILE={envdir}/.coverage
@@ -129,7 +129,7 @@ commands=
 [testenv:protocheck{3,4}]
 basepython=python3
 skip_install = false
-whitelist_externals =
+allowlist_externals =
     cp
     rm
     diff
@@ -274,7 +274,7 @@ commands =
 
 [testenv:pyupgrade]
 basepython=python3
-whitelist_externals =
+allowlist_externals =
     sh
 deps=
     pyupgrade<=2.34.0
@@ -318,7 +318,7 @@ deps =
     codecov
 setenv =
     CIRCLE_BUILD_NUM={env:CIRCLE_WORKFLOW_ID}
-whitelist_externals =
+allowlist_externals =
     mkdir
     cp
 commands =
@@ -340,7 +340,7 @@ deps =
     codecov
 setenv =
     CIRCLE_BUILD_NUM={env:CIRCLE_WORKFLOW_ID}
-whitelist_externals =
+allowlist_externals =
     mkdir
     bash
     cp
@@ -358,7 +358,7 @@ skip_install = true
 deps =
     pytest
     coverage
-whitelist_externals =
+allowlist_externals =
     mkdir
     bash
     cp
@@ -380,7 +380,7 @@ deps =
     codecov
 setenv =
     CIRCLE_BUILD_NUM={env:CIRCLE_WORKFLOW_ID}
-whitelist_externals =
+allowlist_externals =
     mkdir
     cp
     bash.exe
@@ -397,7 +397,7 @@ skip_install = true
 deps =
     pytest
     coverage
-whitelist_externals =
+allowlist_externals =
     mkdir
     cp
 commands =
@@ -426,7 +426,7 @@ deps =
 extras =
     func-s_service-py{36,37,38,39,310}: service
     func-s_grpc-py{36,37,38,39,310}: grpc
-whitelist_externals =
+allowlist_externals =
     mkdir
 commands =
     mkdir -p test-results
@@ -460,7 +460,7 @@ commands =
     func-s_kfp-py{37}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict -p wandb:mockserver-bind=0.0.0.0 -p wandb:mockserver-host=__auto__ --shard kfp run {posargs:--all}
 
 [testenv:pod-store]
-whitelist_externals =
+allowlist_externals =
     mkdir
     cp
 commands =
@@ -471,7 +471,7 @@ commands =
 skip_install = true
 deps =
     coverage
-whitelist_externals =
+allowlist_externals =
     mkdir
     cp
 commands =
@@ -491,7 +491,7 @@ deps =
     codecov
 setenv =
     CIRCLE_BUILD_NUM={env:CIRCLE_WORKFLOW_ID}
-whitelist_externals =
+allowlist_externals =
     mkdir
     cp
 commands =
@@ -519,7 +519,7 @@ deps =
     standalone-{cpu,gpu,tpu,local}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
     yea-wandb=={env:YEA_WANDB_VERSION}
-whitelist_externals =
+allowlist_externals =
     date
     echo
     export
@@ -541,7 +541,7 @@ setenv =
     COVERAGE_FILE={envdir}/.coverage
     TESTING_DIR={toxinidir}/wandb-testing/regression
 passenv = *
-whitelist_externals =
+allowlist_externals =
     git
     echo
     export
@@ -581,7 +581,7 @@ deps =
 setenv =
     {[base]setenv}
 passenv = *
-whitelist_externals =
+allowlist_externals =
     bash
 commands =
     bash tests/standalone_tests/executor_tests/{envname}.sh {posargs}
