--- a/tox.ini
+++ b/tox.ini
@@ -311,7 +311,12 @@ strictness=short
 [testenv:covercircle]
 skip_install = true
 basepython = python3
-passenv = CI CIRCLECI CIRCLE_* CODECOV_* TOXENV
+passenv =
+    CI
+    CIRCLECI
+    CIRCLE_*
+    CODECOV_*
+    TOXENV
 deps =
     pytest
     coverage
@@ -333,7 +338,12 @@ commands =
 [testenv:unit-covercircle]
 skip_install = true
 basepython = python3
-passenv = CI CIRCLECI CIRCLE_* CODECOV_* TOXENV
+passenv =
+    CI
+    CIRCLECI
+    CIRCLE_*
+    CODECOV_*
+    TOXENV
 deps =
     pytest
     coverage
@@ -373,7 +383,12 @@ commands =
 [testenv:wincovercircle]
 skip_install = true
 basepython = python3
-passenv = CI CIRCLECI CIRCLE_* CODECOV_* TOXENV
+passenv =
+    CI
+    CIRCLECI
+    CIRCLE_*
+    CODECOV_*
+    TOXENV
 deps =
     pytest
     coverage
@@ -484,7 +499,12 @@ commands =
 [testenv:func-covercircle]
 skip_install = true
 basepython = python3
-passenv = CI CIRCLECI CIRCLE_* CODECOV_* TOXENV
+passenv =
+    CI
+    CIRCLECI
+    CIRCLE_*
+    CODECOV_*
+    TOXENV
 deps =
     pytest
     coverage
